Add reference of css file, remove unused element.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
     <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width,
+        initial-scale=1.0, 
+        maximum-scale=1.0, 
+        user-scalable=no">
+    <title>Bewitch</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
 <body>
-    <button id="grabCookie">Grab Cookie</button>
-    <a>Cookie Count: </a>
-    <a id="cookieCount"></a>
     <script src='./build/bundle.js'></script>
 </body>
 
