Complete the basic funtionality of "Welcome Scene", "Character Selection Scene".

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         user-scalable=no">
     <title>Bewitch</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/keyframe.css">
 </head>
 
 <body>
